# nedl-data

./: .gitignore  .pre-commit-config.yaml  MIGRATION.md  Makefile  PLAYBOOK.md  README.md  prefect.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  daily_etl.yml
scripts/: backfill.py
src/: __init__.py  config.py  db.py  protocols.py
src/analytics/: __init__.py  dim_entity.py  dim_property.py  fact_transaction.py
src/app/: __init__.py
src/extract/: __init__.py  cherre.py
src/flows/: __init__.py  daily_ownership.py  extract.py  hello.py  transform_analytics.py  validate.py
src/load/: __init__.py  supabase.py
src/raw/: __init__.py  cherre_client.py  cherre_grantees.py  cherre_grantors.py  cherre_properties.py  cherre_transactions.py
src/transform/: __init__.py  bridges.py  dim_entity.py  dim_property.py  fact_transaction.py
src/validation/: __init__.py  checks.py  core.py  data_quality.py
tests/: conftest.py  test_backfill.py  test_module_contracts.py  test_smoke.py
